--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -15,17 +15,62 @@
 .brounded-sm
   border-radius: 8px !important
 
+.img-a 
+  display: block
+  margin: auto
+
+.img-t
+  width: auto !important
+  height: auto !important 
+
+.j1
+  display: grid
+  align-items: center 
+
+.fa-ul
+  margin-left: 0 !important
+  li
+    display: flex !important
+    &:before
+      position: relative
+      margin-right: 7px
+      font-size: 1.4rem   
+
+.br
+  &-1
+    border-radius: 10px !important    
+
+.color
+  &-1
+    color: #215A78 !important    
+
 .bg-color
   &-1
-    background-color: #EAF8FD
+    background-color: #FDE4CC
   &-2
-    background-color: #FFFBE8
+    background-color: #215A78
   &-3
-    background-color: #F0E9F6
+    background-color: #605F5F
   &-4
-    background-color: #EAF8FD
+    background-color: #D7ECF7
+  &-5
+    background-color: #E6E6E6
+  &-6
+    background-color: #FDE4CC
+  &-7
+    background-color: #B1DBF0
+  &-8
+    background-color: #FEF5ED
+  &-9
+    background-color: #E8EDF7
+  &-10
+    background-color: #B0AEAE 
+  &-11
+    background-color: #FFEFC0                         
+  &-video
+    background-image: url("../assets/bg/bg-video.png") !important    
   &-info
-    background-color: #E8EEFD
+    background-image: url("../assets/bg/bg-info.png") !important  
   &-sintesis
     background-color: #F9F9F9
   &-white
@@ -41,21 +86,46 @@
 
 // Full Width Background
 .bg-full-width
-  background-size: cover
-  background-repeat: no-repeat
-  background-position: bottom
-  margin-inline: -3.3rem
-  @media screen and (max-width: $bp-max-sm)
-    padding-left: 1.5rem
-    padding-right: 1.5rem
+  &-1
+    background-size: 100% 79%
+    background-repeat: no-repeat
+    background-position: top
+    margin-inline: -3.3rem
+    @media screen and (max-width: $bp-max-sm)
+      padding-left: 1.5rem
+      padding-right: 1.5rem
+  &-2
+    background-size: 100% 58%
+    background-repeat: no-repeat
+    background-position: top
+    margin-inline: -3.3rem
+    @media screen and (max-width: $bp-max-sm)
+      padding-left: 1.5rem
+      padding-right: 1.5rem  
+
+  &-3
+    background-size: 100% 73%
+    background-repeat: no-repeat
+    background-position: bottom
+    margin-inline: -3.3rem
+    @media screen and (max-width: $bp-max-sm)
+      padding-left: 1.5rem
+      padding-right: 1.5rem  
+
+  &-4
+    background-size: 100% 72.5%
+    background-repeat: no-repeat
+    background-position: bottom !important
+    margin-inline: -3.3rem
+    @media screen and (max-width: $bp-max-sm)
+      padding-left: 1.5rem
+      padding-right: 1.5rem  
 
 .bg-fondo
   &-1
     background-image: url("../assets/bg/bg1.png") !important
-    background-position: top
   &-2
     // background-image: url("../assets/bg/bg2.png") !important
-    background-position: bottom
   &-slider
     background-image: url("../assets/bg/bg-slider.png") !important
     background-position: bottom
@@ -227,3 +297,37 @@ th.bg-color-tabla
 
 .bordes
   border: 1px solid lightgray !important
+
+
+.slyder-a__tipo-b
+  background-color: #7B3289 !important    
+.slyder-a__bullets__item
+  background-color: #C3A2CA !important
+  border-color: #C3A2CA !important
+.slyder-a__bullets__item--active
+  background-color: #E25CFA !important  
+
+.acordion__header
+  background-color: #FFEFC0 !important
+
+.acordion__header--active
+  background-color: #FFCC33 !important
+  h4, i
+    color: #000 !important
+
+.acordion__contenido
+  background-color: #FFF9E9 !important         
+
+ol
+  list-style: decimal
+  padding-left: 2rem  
+
+.ol-alfa
+  list-style: lower-alpha
+
+.tabla-a-1 thead 
+  background-color: #215A78 !important
+  *
+    color: white
+.tabla-a-1 td
+  border: 1px solid #CACACA !important    
